--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -8,7 +8,7 @@
 }
 .trialContainer {
     padding: 0;
-    padding: 42px 40px 0px;
+    padding: 50px 40px 0px;
     height: 100vh;
     background: #F1F1F1;
     width: 100%;
@@ -409,10 +409,13 @@ md-nav-bar md-nav-ink-bar {
 .heading{
     /* font-family: serif; */
     font-size: 24px;
-    text-decoration: underline;
+    /*text-decoration: underline;*/
     /* line-height: 0; */
     color: #4c4d4d;
     font-weight:100;
+        span{
+            border-bottom:1px solid #4c4d4d;
+        }
     }
 /*css for iot*/
 .overview-header{
@@ -421,7 +424,6 @@ md-nav-bar md-nav-ink-bar {
     .heading{
         /* font-family: serif; */
         font-size: 24px;
-        text-decoration: underline;
         /* line-height: 0; */
         color: #4c4d4d;
     }
@@ -667,7 +669,7 @@ md-nav-bar md-nav-ink-bar {
         font-size: 14px;
         background: #3f515f;
         text-align: right;
-        padding: 7px;
+        padding:2px 10px;
     }
     .date-row{
         height:58px;
@@ -686,8 +688,12 @@ md-nav-bar md-nav-ink-bar {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     min-height: auto;
+   text-transform: capitalize;
     height: auto;
     outline: none;
+}
+.button:hover{
+    background: #0d6a92 !important;
 }
 .selected_icon_div{
     width:18px;
