--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,7 +1,7 @@
 
 <div class="login_page" layout="row">
     <div class="login_left_div" flex="65" layout="row" layout-align="center center">
-        <img src="../img/login.png">
+        <img src="../img/log_in_bg.png">
     </div>
     <div class="login_right_div" flex="35"> 
          <div class="login_logo" layout="row" layout-align="center center">
