--- a/src/app/components/view/view.html
+++ b/src/app/components/view/view.html
@@ -6,6 +6,7 @@
         <div class="overlay" ng-class="{'open_overlay' : vm.openOverlay}">
             <div class="overlay_content" layout="row" layout-align="center center">
                 <div class="overlay_text" flex>
+                    <img src="../img/simulating.svg">
                 <h2>Simulating data on pushing the IOT hub...</h2>
                 </div>
             </div>
