--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -15,7 +15,8 @@
             border-bottom:1px solid #c7c7c7;
             img{
                 position: absolute;
-                top:25px;
+                top: 36px;
+                background: #2c5f74;
             }
         }
         .login_form{
