--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -495,6 +495,7 @@ md-nav-bar md-nav-ink-bar {
         }
         .status-btn{
             width: 96px;
+            height:29px;
             border: 1px solid #d0d0d0;
             border-radius: 3px;
             padding: 4px 30px 4px 10px;
@@ -629,7 +630,7 @@ md-nav-bar md-nav-ink-bar {
       
     }
     .selected-value-box{
-        height:calc(100% - 240px);
+        height:calc(100% - 233px);
         background: #283d4c;
         padding: 15px;
         h4{
@@ -650,6 +651,9 @@ md-nav-bar md-nav-ink-bar {
             .label {
                 color:#61676c;
             }
+        }
+        ul li:last-child{
+            border-bottom:0px;
         }
         input[type="text"]{
             background: transparent;
