--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -734,6 +734,9 @@ md-nav-bar md-nav-ink-bar {
             font-size:14px;
         }
     }
+    .reading_row{
+        margin:5px 0px;
+    }
 }
 .reading_row{
     span{
