--- a/src/app/directives/toolbar/toolbar.view.html
+++ b/src/app/directives/toolbar/toolbar.view.html
@@ -31,7 +31,7 @@
                 </md-menu-bar>
                 <md-button class="setting_button" ng-if="!vm.publicPath" aria-label="help">
                     <!-- <i class="material-icons">help_outline</i> -->
-                    <a href="http://help.qloudable.com/" target="_blank"><img src="../../../img/setting.png" width="24" height="24" alt="Setting" /></a>
+                    <a href="#" ><img src="../../../img/setting.png" width="24" height="24" alt="Setting" /></a>
                 </md-button>
 
             </div>
