--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -35,7 +35,7 @@
                             </md-input-container>
                         </div>
                         <div class="login_row">
-                            <md-button type="submit" class="md-primary login_submit">Login</md-button>
+                            <md-button type="submit" ng-disabled="loginForm.$invalid" class="md-primary login_submit">Login</md-button>
                         </div>
                     </form>
                </md-content>
