layoutDetails binded with chooselayout page

--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -869,7 +869,7 @@ md-nav-bar md-nav-ink-bar {
     }
 
 
-    .icon:hover > .halo {
+    .halo.active {
         animation: pulse 2s infinite linear;
     }
 
