--- a/src/app/components/view/view.html
+++ b/src/app/components/view/view.html
@@ -195,3 +195,6 @@
         </md-content>
     </div>
 </div>
+<div class="show_loading" ng-if="vm.showLoading">
+    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+</div>
