--- a/src/app/components/view/view.html
+++ b/src/app/components/view/view.html
@@ -109,7 +109,7 @@
                      </md-menu-bar>
                 </div>
             </div>
-            <div class="selected-value-box">
+            <div class="selected-value-box" ng-show="vm.properties">
                  <h4>Selected Powerscout</h4>
                  <p class="selected-item" ng-model="vm.properties.iconName"><img  src="../img/svg/{{vm.properties.iconName}}.svg" height="15px">{{vm.properties.id}}</p>
                  <ul>
