--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -672,11 +672,14 @@ md-nav-bar md-nav-ink-bar {
         }
     }
     .simulate-row{
-       height: 45px;
+        height: 45px;
         font-size: 14px;
         background: #3f515f;
         text-align: right;
-        padding:2px 10px;
+        padding: 2px 10px;
+        position: absolute;
+        width: 100%;
+        bottom: 0px;
     }
     .date-row{
         height:58px;
