Final postObject for enabled sensors and powerscout on simulate

--- a/src/app/components/view/view.html
+++ b/src/app/components/view/view.html
@@ -144,7 +144,7 @@
                  </ul>  
             </div>
             <div class="simulate-row">
-               <button class="md-button button" ng-click="vm.openOverlay = !vm.openOverlay">Simulate</button>
+               <button class="md-button button" ng-click="vm.evtSimulate()">Simulate</button>
             </div> 
             <div class="clearfix"></div> 
         </div>
