--- a/src/app/components/view/view.scss
+++ b/src/app/components/view/view.scss
@@ -605,9 +605,10 @@ md-nav-bar md-nav-ink-bar {
                 margin:0px;
                 border:0px;
                 md-input-container{
+                    button{text-align:left;}
                     margin:0px 0px;
                     label{
-                        margin-bottom:5px;
+                        margin-bottom:0px;
                         font-size: 14px;
                         color:#4a5359;
                     }
@@ -752,7 +753,7 @@ md-nav-bar md-nav-ink-bar {
     } 
 }
 .select_menu{
-    min-width:200px;   
+    min-width:200px !important;   
     background: #1b2933 !important;         
     md-menu-item{
         min-height:auto;
@@ -769,7 +770,7 @@ md-nav-bar md-nav-ink-bar {
         border:0px;
     } 
     &.select_date{
-        min-width: 150px !important;
+        min-width: 170px !important;
         .layout-row{
             padding:5px 0px;
         }
